Formatting changes for checkstyle, fix unfollower ratio calculation